--- a/spravochnik.html
+++ b/spravochnik.html
@@ -1,7 +1,7 @@
-[[*название поля]] - для вызова поля в шаблонах.
+<p>[[*название поля]] - для вызова поля в шаблонах.</p>
 
-[[+название поля]] - если нужно вызвать в сниппете как плесхолдер.
+<p>[[+название поля]] - если нужно вызвать в сниппете как плесхолдер.</p>
 
-[[$название чанка]] - вызов для чанка.
+<p>[[$название чанка]] - вызов для чанка.</p>
 
-[[!сниппет]]
+<p>[[!сниппет]]</p>
